Automatically backed up by Learn

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,23 @@
+<%= @post.title %>
+<%= @post.content %>
+<% @post.categories.each do |c| %>
+    <%= c.name %>
+<% end %>
 
+<%= form_for @comment do |f| %>
+    <%= f.hidden_field :post_id, :value => params[:id] %>
+    <%= f.text_field :content %>
+    <%= f.collection_select :user_id, User.all, :id, :username %>
+    <%= f.fields_for :user, @comment.build_user do |user| %>
+      <%= user.text_field :username %>
+    <% end %>
+    <%= f.submit %>
+<% end %>
+
+<% @post.comments.each do |c| %>
+    <%= c.user.username %> says: <%= c.content %>
+<% end %>
+
+<%= @post.users.uniq.each do |u| %>
+    <%= link_to u.username, user_path(u) %>
+<% end %>
