--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,7 @@
-<% @category.posts.each do |post| %>
-  <%= link_to post.title, post_path(post) %>
-<% end %>
+<h1><%= @category.name %></h1>
+
+<ul>
+  <% @category.posts.each do |post| %>
+    <li><%= link_to post.title, post %></li>
+  <% end %>
+</ul>
