Automatically backed up by Learn

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,32 @@
-<%= @post.title %>
+<h2><%= @post.title %></h2>
 <%= @post.content %>
-<% @post.categories.each do |c| %>
-    <%= c.name %>
+<h3>Categories</h3>
+<% @post.categories.each do |category| %>
+  <%= link_to category.name, category %>
 <% end %>
 
-<%= form_for @comment do |f| %>
-    <%= f.hidden_field :post_id, :value => params[:id] %>
-    <%= f.text_field :content %>
-    <%= f.collection_select :user_id, User.all, :id, :username %>
-    <%= f.fields_for :user, @comment.build_user do |user| %>
-      <%= user.text_field :username %>
-    <% end %>
-    <%= f.submit %>
-<% end %>
+<h3>Comments</h3>
+<ul>
+  <% @post.comments.each do |comment| %>
+    <li><%= comment.user.username %> says: <%= comment.content %></li>
+  <% end %>
+</ul>
 
-<% @post.comments.each do |c| %>
-    <%= c.user.username %> says: <%= c.content %>
+<h3>All Commenters</h3>
+<ul>
+<% @post.users.uniq.each do |user| %>
+  <li><%= link_to user.username, user %></li>
 <% end %>
+</ul>
 
-<%= @post.users.uniq.each do |u| %>
-    <%= link_to u.username, user_path(u) %>
+<h3>Add a Comment</h3>
+<%= form_for @post.comments.build do |f| %>
+  <%= f.label "Content" %>
+  <%= f.text_field :content %>
+  <%= f.collection_select :user_id, User.all, :id, :username, include_blank: 'Choose a User' %>
+  <%= f.hidden_field :post_id %>
+  <%= f.fields_for :user, @post.comments.last.build_user do |user_fields| %>
+    <%= user_fields.text_field :username %>
+  <% end %>
+  <%= f.submit %>
 <% end %>
