--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
-<% @user.posts.each do |post| %>
-  <%= link_to post.title, post_path(post) %>
-<% end %>
+<h1><%= @user.username %></h1>
+
+<h3>Has Commented on Posts:</h3>
+<ul>
+  <% @user.posts.uniq.each do |post| %>
+    <li><%= link_to post.title, post %></li>
+  <% end %>
+</ul>
