Automatically backed up by Learn

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,34 @@
-<%= form_for post do |f| %>
-  <%= f.label "Title" %>
-  <%= f.text_field :title %>
-  <%= f.label "Content" %>
-  <%= f.text_area :content %>
-  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
-  <%= f.label "Create a New Category"%>
-  <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
-    <%= categories_fields.text_field :name %>
-  <% end %>
-  <%= f.submit %>
+<%= form_for(@post) do |f| %>
+
+	<!-- Post Name -->
+	<div> 
+		<%= f.label :title %>
+		<%= f.text_field :title %>
+	</div>
+
+	<!-- Post Content -->
+	<div>
+		<%= f.label :content %>
+		<%= f.text_area :content %>
+	</div>
+
+	<div>
+		<!-- Build Check boxes for Existing Categories -->
+		<%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |b| %>
+			<div>
+				<%= b.label%>
+				<%= b.check_box %>
+			</div>
+		<% end %>
+
+		<!-- Add a form for a New Category -->
+		<%= f.fields_for :categories do |c_builder| %>
+			<% c_builder.text_field :name %>
+		<% end %>
+
+	</div>
+
+	<div>
+		<%= f.submit %>
+	</div>
 <% end %>
