Automatically backed up by Learn

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,7 @@
 <h1><%= @user.username %></h1>
-
-<h3>Has Commented on Posts:</h3>
+Commented Posts:
 <ul>
-  <% @user.posts.uniq.each do |post| %>
-    <li><%= link_to post.title, post %></li>
-  <% end %>
+	<% @user.posts.each do |post| %>
+		<li><%= link_to post.title, post_path(post) %></li>
+	<% end %>
 </ul>
