--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,7 @@
+<h1><%= @category.name %></h1>
 
-<h1>Category: <%= @category.name %></h1>
 <ul>
-	Posts:
-	<% @category.posts.each do |post| %>
-		<li><%= link_to post.title, post_path(post) %></li>
-	<% end %>
-	
+  <% @category.posts.each do |post| %>
+    <li><%= link_to post.title, post %></li>
+  <% end %>
 </ul>
